# psychic-journey

./: .gitignore  EXPERIMENTS.md  README.md
memory-research/: README.md  pyproject.toml
memory-research/scripts/: ablate_memory_path.py  check_ready.py  count_mac_params.py  diagnose_gradients.py  diagnose_lima_failure_modes.py  diagnose_mac_memory_usage.py  diagnose_mac_readout_path.py  diagnose_query_update_modes.py  eval_lima_answer_memory_updates.py  forward_smoke_test.py  inference_sanity_check.py  mission_control.py  probe_article_memory.py  probe_lima_memory_generation.py  probe_lima_persistent_bank.py  probe_memory_decay.py  probe_memory_dynamics.py  probe_persistent_memory_noreset.py  probe_prefill_memory.py  run_causal_posttests.sh  sample_wikitext_checkpoint.py  setup_env.sh  train_lima_memory_task.py  train_tiny_overfit.py  train_wikitext_real.py  train_wikitext_smoke.py  train_wikitext_with_tokenizer.py
memory-research/src/memory_lab/: __init__.py  runtime.py
memory-research/src/memory_lab/adapters/: nested_learning_adapter.py  titans_adapter.py
memory-research/src/memory_lab/core/: interfaces.py
memory-research/src/memory_lab/memory/: hybrid_memory.py
memory-research/src/memory_lab/models/: memory_mac.py
memory-research/tests/: test_scaffold.py
titans-pytorch-mlx/: LICENSE  README.md  pyproject.toml
titans-pytorch-mlx/examples/: __init__.py  basic_usage.py  long_sequence.py
titans-pytorch-mlx/scripts/: benchmark_babilong.py  eval_perplexity.py  inference.py  inference_mlx.py  pretokenize.py  pretrain.py  pretrain_distributed.py  pretrain_mlx.py
titans-pytorch-mlx/src/titans/: __init__.py  attention.py  config.py  cuda_optimizations.py  flash_attention.py  hub.py  memory.py  models.py  optimized_inference.py  optimized_training.py  persistent.py  triton_kernels.py
titans-pytorch-mlx/src/titans_mlx/: __init__.py  attention.py  config.py  memory.py  metal_kernels.py  models.py  optimizations.py  persistent.py
titans-pytorch-mlx/tests/: __init__.py  conftest.py  test_attention.py  test_config.py  test_memory.py  test_mlx_parity.py  test_models.py  test_numerical_parity.py  test_persistent.py
