[project]
name = "titans"
version = "0.1.0"
description = "Implementation of Titans: Learning to Memorize at Test Time"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [
    { name = "Delanoe Pirard", email = "contact@aedelon.com" }
]
keywords = ["deep-learning", "memory", "transformers", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.2.0",
    "einops>=0.8.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.2",
]
train = [
    "transformers>=4.36.0",
    "datasets>=2.16.0",
    "wandb>=0.16.0",
    "accelerate>=0.25.0",
]
hub = [
    "huggingface_hub>=0.20.0",
]
flash = [
    "flash-attn>=2.5.0",
]
triton = [
    "triton>=2.1.0",
]
mlx = [
    "mlx>=0.18.0",
]
all = [
    "titans[dev,train,hub,flash,triton,mlx]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["titans", "titans_mlx"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["torch.*", "transformers.*", "datasets.*", "wandb.*", "accelerate.*", "flash_attn.*", "triton.*", "huggingface_hub.*", "bitsandbytes.*", "mlx.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "numpy>=2.4.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
]
